# GOD

./: .env.example  .gitignore  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  QUICKSTART.md  QUICKSTART.zh-CN.md  README.md  README.zh-CN.md
jiuwenclaw/: .gitignore  MANIFEST.in  OPEN_SOURCE_SOFTWARE_NOTICE.md  README.md  README_CN.md  TESTING.md  pyproject.toml  pytest.ini  run_tests.sh
jiuwenclaw/docker/: Dockerfile.claw  Dockerfile.claw.base  Dockerfile.yr.rt.mgr
jiuwenclaw/jiuwenbox/: README.md  README_CN.md  pyproject.toml
jiuwenclaw/jiuwenbox/configs/: default-policy.yaml  yuanrong.yaml
jiuwenclaw/jiuwenbox/docker/: Dockerfile  requirements.txt
jiuwenclaw/jiuwenbox/scripts/: build_docker.sh  run_docker.sh
jiuwenclaw/jiuwenbox/src/jiuwenbox/: __init__.py  logging_config.py
jiuwenclaw/jiuwenbox/tests/: conftest.py  test.sh
jiuwenclaw/jiuwenbox/tests/integration/: conftest.py  mock_llm_server.py  test_inference_privacy_proxy.py  test_server_api_default.py
jiuwenclaw/jiuwenbox/tests/performance/: conftest.py  test_concurrent_office_workload.py
jiuwenclaw/jiuwenclaw/: app.py  dotenv_early.py  init_workspace.py  start_services.py
jiuwenclaw/jiuwenclaw/channels/acp/: app_acp.py
jiuwenclaw/jiuwenclaw/channels/desktop/: desktop_app.py
jiuwenclaw/jiuwenclaw/channels/web/: app_web.py
jiuwenclaw/jiuwenclaw/common/: config.py  updater.py  utils.py  version.py
jiuwenclaw/jiuwenclaw/common/e2a/: __init__.py  adapters.py  agent_compat.py  constants.py  gateway_normalize.py  models.py  wire_codec.py
jiuwenclaw/jiuwenclaw/common/schema/: __init__.py  agent.py  event_base.py  message.py
jiuwenclaw/jiuwenclaw/common/security/: base_crypto.py  ws_origin.py
jiuwenclaw/jiuwenclaw/extensions/: __init__.py  callback_compat.py  hook_event.py  hooks_context.py  loader.py  manager.py  registry.py  types.py
jiuwenclaw/jiuwenclaw/extensions/sdk/: __init__.py  agent_server_client.py  base.py  crypto_utility.py
jiuwenclaw/jiuwenclaw/gateway/: __init__.py  app_gateway.py
jiuwenclaw/jiuwenclaw/gateway/channel_manager/: __init__.py  base.py  channel_manager.py
jiuwenclaw/jiuwenclaw/gateway/cron/: controller.py  cron_expr.py  cron_json_convert.py  models.py  scheduler.py  store.py
jiuwenclaw/jiuwenclaw/gateway/heartbeat/: __init__.py  heartbeat.py
jiuwenclaw/jiuwenclaw/gateway/im_pipeline/: __init__.py  im_inbound.py  im_outbound.py
jiuwenclaw/jiuwenclaw/gateway/message_handler/: __init__.py  message_handler.py
jiuwenclaw/jiuwenclaw/instance_manager/: __init__.py  bootstrap.py  config.py  lock.py  status.py  yaml.py
jiuwenclaw/jiuwenclaw/resources/: .env.template  builtin_rules.yaml  config.team.distributed.leader.yaml  config.team.distributed.teammate.yaml  config.yaml
jiuwenclaw/jiuwenclaw/scripts/: generate-agent-folders.js  watch-folders.js
jiuwenclaw/jiuwenclaw/server/: __init__.py  agent_ws_server.py  app_agentserver.py
jiuwenclaw/scripts/: build-exe.bat  build-exe.ps1  build-macos.sh  build.ps1  build.sh  build_python_packages.py  build_tui.py  jiuwenclaw.iss  jiuwenclaw.spec  jiuwenclaw_exe_entry.py  run_gateway_acp.cmd  run_gateway_acp.sh
jiuwenclaw/scripts/nfs/: README.md  setup_nfs_client.sh  setup_nfs_server.sh  teardown_nfs_client.sh  teardown_nfs_server.sh
jiuwenclaw/tests/: README.md  conftest.py
jiuwenclaw/tests/integration/: __init__.py  test_acp_cli_stdio_integration.py
jiuwenclaw/tests/system_tests/: __init__.py  conftest.py  test_a2x_bootstrap_replace_flow.py  test_a2x_client_runtime.py  test_acp_cli_stdio.py  test_cli_channel_ws.py  test_coding_memory.py  test_init_workspace.py  test_project_memory.py  test_structured_ask_user.py  test_system_prompt_live_capture.py  test_team_continuous_dialog.py
jiuwenclaw/tests/ui_e2e/: SKILL.md  __init__.py  cron_ui_report.py  run_suite.py  runtime_openjiuwen.py  todo_ui_report.py
jiuwenclaw/tests/unit_tests/: __init__.py  conftest.py  test_app_cli.py  test_app_readiness.py  test_app_web_handlers.py  test_config.py  test_instance_manager.py  test_models_replace_all_merge.py  test_session_metadata.py  test_utils.py
(+1216 files in other folders)
