[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jiuwenclaw"
version = "0.1.11"
description = "JiuwenClaw"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "a2a-sdk[http-server]==1.0.0a0",
    "chromadb>=1.5.0",
    "ruamel.yaml>=0.18.0",
    "lark-oapi>=1.5.3",
    "loguru>=0.7.3",
    "openjiuwen @ git+https://gitcode.com/openJiuwen/agent-core.git@develop",
    "pip==26.0.1",
    "pgvector>=0.4.2",
    "websockets>=12.0",
    "psutil>=7.2.2",
    "aiosqlite>=0.22.1",
    "croniter>=2.0.0",
    "python-telegram-bot>=20.0",
    "discord.py>=2.4.0",
    "dingtalk-stream>=0.24.3",
    "wecom-aibot-sdk>=1.0.5",
    "python-socks>=2.8.1",
    "greenlet>=3.3.2",
    "skillnet-ai==0.0.16",
    "mutagen>=1.47.0",
    "google-genai>=1.68.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "sqlite-vec==0.1.6"
]

[project.optional-dependencies]
desktop = ["pywebview>=5.4"]
dev = ["pyinstaller>=6.0.0", "pywebview>=5.4"]
tui = ["jiuwenclaw-tui==0.1.11"]
distribute = ["openjiuwen[postgres,zmq]"]
shell-ast = [
    "tree-sitter>=0.25.0,<0.26.0",
    "tree-sitter-bash>=0.25.0,<0.26.0",
]
# Same packages as [dependency-groups] test (pip install -e ".[test]")
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.14.0",
    "pytest-cov>=7.0.0",
    "coverage>=7.7.1",
    "pyyaml>=6.0",
]

[project.scripts]
jiuwenclaw-app = "jiuwenclaw.app:main"
jiuwenclaw-agentserver = "jiuwenclaw.server.app_agentserver:main"
jiuwenclaw-gateway = "jiuwenclaw.gateway.app_gateway:main"
jiuwenclaw-web = "jiuwenclaw.channels.web.app_web:main"
jiuwenclaw-start = "jiuwenclaw.start_services:main"
jiuwenclaw-init = "jiuwenclaw.init_workspace:main"
jiuwenclaw-desktop = "jiuwenclaw.channels.desktop.desktop_app:main"
jiuwenclaw-tui = "jiuwenclaw.channels.acp.app_acp:main"

[tool.setuptools]
# 入口脚本现在是 jiuwenclaw 包内的一部分，不需要 py-modules
py-modules = []
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["jiuwenclaw*"]
exclude = ["jiuwenclaw.cli*", "jiuwenclaw.web*"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["LICENSE"]
jiuwenclaw = [
    "channels/web/frontend/dist/**/*",
    "channels/web/frontend/dist/*",
    # config / env 模板放在 resources 目录
    "resources/**/*",
    "resources/*",
    "resources/.env.template",
]

[tool.setuptools.exclude-package-data]
jiuwenclaw = ["channels/web/frontend/node_modules/**", "channels/web/frontend/node_modules/*"]

[tool.uv.sources]
jiuwenclaw-tui = { path = "./packages/jiuwenclaw-tui" }

[dependency-groups]
# Testing (keep in sync with optional-dependencies.test)
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.14.0",
    "pytest-cov>=7.0.0",
    "coverage>=7.7.1",
    "pyyaml>=6.0",
]
